# secret

./: README.md  pyproject.toml
src/secret/: __main__.py  app.py  app.tcss  storage.py
src/secret/commands/: __init__.py  builtin.py  registry.py
