[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secret"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "cryptography>=42.0.0",
]

[project.scripts]
secret = "secret.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/secret"]

[tool.hatch.envs.default]
dependencies = [
    "textual-dev",
]
